# ast-reflection

./: .gitattributes  .gitignore  .npmignore  .projenrc.js  CONTRIBUTING.md  Cargo.toml  package.json  rust-toolchain
.github/workflows/: build.yml  publish.yml  release.yml  upgrade-main.yml
.projen/: deps.json  tasks.json
src/: ast.rs  class_like.rs  closure_decorator.rs  free_variables.rs  index.ts  js_util.rs  lexical_scope.rs  lib.rs  method_like.rs  parse.rs  prepend.rs  span.rs  to_functionless_ast.rs  virtual_machine.rs  wrap_closure.rs
tests/: functionless.sh  tests.rs
tests/fixture/class-constructor/: input.js  output.js
tests/fixture/class-methods/: input.js  output.js
tests/fixture/class-static-blocks/: input.js  output.js
tests/fixture/function-parameters/: input.js  output.js
tests/fixture/functions/: input.js  output.js
tests/fixture/imports/: input.js
tests/fixture/wrap-closure/: input.js  output.js
