[package]
name = "ast_reflection"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
swc_atoms = "0.4.9"
swc_core = { version = "0.17.0", features = [
  "plugin_transform",
  "utils",
  "visit",
  "ast",
  "common",
] }
im = "*"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
testing = "0.29.4"